# SeetaFaceEngine

./: .gitignore  run.sh  test_face_verification.cpp
FaceAlignment/: CMakeLists.txt  test.sh
FaceAlignment/include/: cfan.h  common.h  face_alignment.h  sift.h
FaceAlignment/src/: cfan.cpp  face_alignment.cpp  sift.cpp
FaceAlignment/src/test/: face_alignment_test.cpp
FaceDetection/: CMakeLists.txt  test.sh
FaceDetection/include/: classifier.h  common.h  detector.h  face_detection.h  feature_map.h  fust.h  model_reader.h
FaceDetection/include/classifier/: lab_boosted_classifier.h  mlp.h  surf_mlp.h
FaceDetection/include/feat/: lab_feature_map.h  surf_feature_map.h
FaceDetection/include/io/: lab_boost_model_reader.h  surf_mlp_model_reader.h
FaceDetection/include/util/: image_pyramid.h  math_func.h  nms.h
FaceDetection/src/: face_detection.cpp  fust.cpp
FaceDetection/src/classifier/: lab_boosted_classifier.cpp  mlp.cpp  surf_mlp.cpp
FaceDetection/src/feat/: lab_feature_map.cpp  surf_feature_map.cpp
FaceDetection/src/io/: lab_boost_model_reader.cpp  surf_mlp_model_reader.cpp
FaceDetection/src/test/: facedetection_test.cpp
FaceDetection/src/util/: image_pyramid.cpp  nms.cpp
FaceIdentification/: CMakeLists.txt
FaceIdentification/include/: aligner.h  bias_adder_net.h  blob.h  bn_net.h  common.h  common_net.h  conv_net.h  eltwise_net.h  face_identification.h  hyper_param.h  inner_product_net.h  log.h  math_functions.h  max_pooling_net.h  net.h  net_factory.h  pad_net.h  recognizer.h  spatial_transform_net.h  tform_maker_net.h  viplnet.h
FaceIdentification/src/: bias_adder_net.cpp  blob.cpp  bn_net.cpp  common_net.cpp  conv_net.cpp  eltwise_net.cpp  inner_product_net.cpp  log.cpp  math_functions.cpp  max_pooling_net.cpp  net.cpp  pad_net.cpp  spatial_transform_net.cpp  tform_maker_net.cpp
FaceIdentification/src/test/: CMakeLists.txt  test_face_recognizer.cpp  test_face_verification.cpp
FaceIdentification/tools/: aligner.cpp  face_identification.cpp
